--- a/src/components/Weather.module.css
+++ b/src/components/Weather.module.css
@@ -1,3 +1,43 @@
 .weather {
-  margin-block-start: 3rem;
+  margin-block-start: 1rem;
+  padding: 0.25rem 0.5rem 1rem;
+  max-width: 360px;
+}
+
+.weather > * + * {
+  margin-block-start: 0.5rem;
+}
+
+.weather svg {
+  width: 192px;
+  height: 192px;
+  margin: 0 auto;
+}
+
+.weather p {
+  margin-block-end: 0;
+  font-size: var(--s-1);
+}
+
+.weather small {
+  display: block;
+  margin-block-start: 1rem;
+  text-align: right;
+}
+
+.weather small,
+.weather small a {
+  font-size: var(--s-1);
+}
+
+.weather input,
+.weather button {
+  width: 100%;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  font-size: var(--s-1);
 }
